-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 4.2.0, 4.4.0, 5.0.0, 6.0.0, 7.0.0, 8.0.0, 8.1.0, 8.2.0
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
v8.2, v8.0, v7.0
-
CAR Team 2025-12-08
-
1
-
🟩 Routing and Topology
-
None
-
None
-
None
-
None
-
None
-
None
When a shard gets added to a cluster, an unnecessary balancer configuration refresh is performed before returning to the user, crashing the process if the configuration is not available yet. Right after starting up a mongod process, it is totally possible for the balancer configuration not to be available because the grid is (initializing it) without synchronizing in any way with addShard commands.
That code snippet can be safely removed consider the auto-splitter has been removed in v6.0: the refresh was originally added under SERVER-31586 for making sure the auto-splitter could determine whether it should run.
- causes
-
SERVER-118666 Check config server connectivity during shardsvrAddShard command
-
- Closed
-
- is caused by
-
SERVER-31586 Recreate PeriodicBalancerSettingsRefresher on the ServiceContext
-
- Closed
-