SERVER-114271 Remove unnecessary balancer configuration refresh that may crash the process during addShard (#44292)

GitOrigin-RevId: 7f6a508c25d22e807e7811cd5e351021fc139353